--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,28 @@
       <button id="logout-btn">Cerrar Sesión</button>
       <hr>
 
+      <!-- SECCIÓN DE REGISTRO DE USUARIOS -->
+      <fieldset>
+        <legend>2. Gestión de Usuarios</legend>
+        <div class="endpoint-test">
+          <h4>Registrar Nuevo Usuario (POST /api/v1/auth/register)</h4>
+          <p class="note">Nota: Solo un administrador puede realizar esta acción.</p>
+          <form id="register-form">
+            <input type="email" name="email" placeholder="Email del nuevo usuario" required>
+            <input type="password" name="password" placeholder="Contraseña del nuevo usuario" required>
+            <label for="role-select">Rol del usuario:</label>
+            <select name="role" id="role-select" aria-label="Rol del usuario">
+              <option value="cliente" selected>Rol: Cliente</option>
+              <option value="admin">Rol: Administrador</option>
+            </select>
+            <button type="submit">Registrar Usuario</button>
+          </form>
+        </div>
+      </fieldset>
+
       <!-- GESTIÓN DE PRODUCTOS -->
       <fieldset>
-        <legend>2. Gestión de Productos</legend>
+        <legend>3. Gestión de Productos</legend>
 
         <!-- Listar Productos -->
         <div class="endpoint-test">
@@ -55,13 +74,12 @@
         <div class="endpoint-test">
           <h4>Crear Producto (POST /api/v1/productos)</h4>
           <form id="create-product-form" enctype="multipart/form-data">
-            <input type="text" id="create-nombre" name="nombre" placeholder="Nombre del producto" required>
-            <input type="text" id="create-descripcion" name="descripcion" placeholder="Descripción" required>
-            <input type="number" id="create-precio" name="precio" placeholder="Precio" step="0.01" required>
-            <input type="number" id="create-stock" name="stock" placeholder="Stock" required>
-            <!-- CAMBIO: Campo para la imagen -->
+            <input type="text" name="nombre" placeholder="Nombre del producto" required>
+            <input type="text" name="descripcion" placeholder="Descripción" required>
+            <input type="number" name="precio" placeholder="Precio" step="0.01" required>
+            <input type="number" name="stock" placeholder="Stock" required>
             <label for="create-imagen">Imagen:</label>
-            <input type="file" id="create-imagen" name="imagen" accept="image/*">
+            <input type="file" id="create-imagen" name="imagen" accept="image/*" title="Seleccionar imagen del producto">
             <button type="submit">Crear Producto</button>
           </form>
         </div>
